Committer: root <root@lily.uthsc.edu> On branch master

--- a/web/RIsample.html
+++ b/web/RIsample.html
@@ -71,55 +71,158 @@
 <HR width="90%"><P class="subtitle">BXD</P>
 
 <TABLE class="collap">
-<TR><TD class="strains" width="80">B6D2F1</TD><TD class="values" width="60">6.717</TD><TD class="strains" width="80">D2B6F1</TD><TD class="values" width="60">11.511</TD><TD class="strains" width="80">C57BL/6J</TD><TD class="values" width="60">X</TD><TD class="strains" width="80">DBA/2J</TD><TD class="values" width="60">20.201</TD><TD class="strains" width="80">BXD1</TD><TD class="values" width="60">X</TD><TD class="strains" width="80">BXD2</TD><TD class="values" width="60">15.175</TD></TR>
+<TR>
+<TD class="strains" width="80">B6D2F1</TD><TD class="values" width="60">6.717</TD>
+<TD class="strains" width="80">D2B6F1</TD><TD class="values" width="60">11.511</TD>
+<TD class="strains" width="80">C57BL/6J</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">DBA/2J</TD><TD class="values" width="60">20.201</TD>
+<TD class="strains" width="80">BXD1</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD2</TD><TD class="values" width="60">15.175</TD>
+</TR>
 
-<TR><TD class="strains" width="80">BXD5</TD><TD class="values" width="60">X</TD><TD class="strains" width="80">BXD6</TD><TD class="values" width="60">43.132</TD><TD class="strains" width="80">BXD8</TD><TD class="values" width="60">21.755</TD><TD class="strains" width="80">BXD9</TD><TD class="values" width="60">47.028</TD><TD class="strains" width="80">BXD11</TD><TD class="values" width="60">X</TD><TD class="strains" width="80">BXD12</TD><TD class="values" width="60">22.096</TD></TR>
+<TR>
+<TD class="strains" width="80">BXD5</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD6</TD><TD class="values" width="60">43.132</TD>
+<TD class="strains" width="80">BXD8</TD><TD class="values" width="60">21.755</TD>
+<TD class="strains" width="80">BXD9</TD><TD class="values" width="60">47.028</TD>
+<TD class="strains" width="80">BXD11</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD12</TD><TD class="values" width="60">22.096</TD>
+</TR>
 
-<TR><TD class="strains" width="80">BXD13</TD><TD class="values" width="60">22.219</TD><TD class="strains" width="80">BXD14</TD><TD class="values" width="60">X</TD><TD class="strains" width="80">BXD15</TD><TD class="values" width="60">X</TD><TD class="strains" width="80">BXD16</TD><TD class="values" width="60">35.218</TD><TD class="strains" width="80">BXD18</TD><TD class="values" width="60">49.557</TD><TD class="strains" width="80">BXD19</TD><TD class="values" width="60">34.263</TD></TR>
+<TR>
+<TD class="strains" width="80">BXD13</TD><TD class="values" width="60">22.219</TD>
+<TD class="strains" width="80">BXD14</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD15</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD16</TD><TD class="values" width="60">35.218</TD>
+<TD class="strains" width="80">BXD18</TD><TD class="values" width="60">49.557</TD>
+<TD class="strains" width="80">BXD19</TD><TD class="values" width="60">34.263</TD>
+</TR>
 
-<TR><TD class="strains" width="80">BXD20</TD><TD class="values" width="60">X</TD><TD class="strains" width="80">BXD21</TD><TD class="values" width="60">8.783</TD><TD class="strains" width="80">BXD22</TD><TD class="values" width="60">62.439</TD><TD class="strains" width="80">BXD23</TD><TD class="values" width="60">40.449</TD><TD class="strains" width="80">BXD24a</TD><TD class="values" width="60">X</TD><TD class="strains" width="80">BXD24</TD><TD class="values" width="60">X</TD></TR>
+<TR>
+<TD class="strains" width="80">BXD20</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD21</TD><TD class="values" width="60">8.783</TD>
+<TD class="strains" width="80">BXD22</TD><TD class="values" width="60">62.439</TD>
+<TD class="strains" width="80">BXD23</TD><TD class="values" width="60">40.449</TD>
+<TD class="strains" width="80">BXD24a</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD24</TD><TD class="values" width="60">X</TD>
+</TR>
 
-<TR><TD class="strains" width="80">BXD25</TD><TD class="values" width="60">36.554</TD>
-<TD class="strains" width="80">BXD27</TD><TD class="values" width="60">29.903</TD><TD class="strains" width="80">BXD28</TD><TD class="values" width="60">28.437</TD><TD class="strains" width="80">BXD29</TD><TD class="values" width="60">14.894</TD><TD class="strains" width="80">BXD30</TD><TD class="values" width="60">5.665</TD><TD class="strains" width="80">BXD31</TD><TD class="values" width="60">60.723</TD></TR>
+<TR>
+<TD class="strains" width="80">BXD25</TD><TD class="values" width="60">36.554</TD>
+<TD class="strains" width="80">BXD27</TD><TD class="values" width="60">29.903</TD>
+<TD class="strains" width="80">BXD28</TD><TD class="values" width="60">28.437</TD>
+<TD class="strains" width="80">BXD29</TD><TD class="values" width="60">14.894</TD>
+<TD class="strains" width="80">BXD30</TD><TD class="values" width="60">5.665</TD>
+<TD class="strains" width="80">BXD31</TD><TD class="values" width="60">60.723</TD>
+</TR>
 
-<TR><TD class="strains" width="80">BXD32</TD><TD class="values" width="60">50.458</TD>
-<TD class="strains" width="80">BXD33</TD><TD class="values" width="60">16.857</TD><TD class="strains" width="80">BXD34</TD><TD class="values" width="60">37.410</TD><TD class="strains" width="80">BXD35</TD><TD class="values" width="60">35.857</TD><TD class="strains" width="80">BXD36</TD><TD class="values" width="60">33.139</TD><TD class="strains" width="80">BXD37</TD><TD class="values" width="60">42.392</TD></TR>
+<TR>
+<TD class="strains" width="80">BXD32</TD><TD class="values" width="60">50.458</TD>
+<TD class="strains" width="80">BXD33</TD><TD class="values" width="60">16.857</TD>
+<TD class="strains" width="80">BXD34</TD><TD class="values" width="60">37.410</TD>
+<TD class="strains" width="80">BXD35</TD><TD class="values" width="60">35.857</TD>
+<TD class="strains" width="80">BXD36</TD><TD class="values" width="60">33.139</TD>
+<TD class="strains" width="80">BXD37</TD><TD class="values" width="60">42.392</TD>
+</TR>
 
-<TR><TD class="strains" width="80">BXD38</TD><TD class="values" width="60">X</TD>
-<TD class="strains" width="80">BXD39</TD><TD class="values" width="60">62.003</TD><TD class="strains" width="80">BXD40</TD><TD class="values" width="60">28.797</TD><TD class="strains" width="80">BXD41</TD><TD class="values" width="60">30.399</TD><TD class="strains" width="80">BXD42</TD><TD class="values" width="60">X</TD><TD class="strains" width="80">BXD43</TD><TD class="values" width="60">X</TD></TR>
+<TR>
+<TD class="strains" width="80">BXD38</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD39</TD><TD class="values" width="60">62.003</TD>
+<TD class="strains" width="80">BXD40</TD><TD class="values" width="60">28.797</TD>
+<TD class="strains" width="80">BXD41</TD><TD class="values" width="60">30.399</TD>
+<TD class="strains" width="80">BXD42</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD43</TD><TD class="values" width="60">X</TD>
+</TR>
 
-<TR><TD class="strains" width="80">BXD44</TD><TD class="values" width="60">30.876</TD>
-<TD class="strains" width="80">BXD45</TD><TD class="values" width="60">22.120</TD><TD class="strains" width="80">BXD48</TD><TD class="values" width="60">X</TD><TD class="strains" width="80">BXD49</TD><TD class="values" width="60">28.619</TD><TD class="strains" width="80">BXD50</TD><TD class="values" width="60">X</TD><TD class="strains" width="80">BXD51</TD><TD class="values" width="60">16.156</TD></TR>
+<TR>
+<TD class="strains" width="80">BXD44</TD><TD class="values" width="60">30.876</TD>
+<TD class="strains" width="80">BXD45</TD><TD class="values" width="60">22.120</TD>
+<TD class="strains" width="80">BXD48a</TD><TD class="values" width="60">20.704</TD>
+<TD class="strains" width="80">BXD48</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD49</TD><TD class="values" width="60">28.619</TD>
+<TD class="strains" width="80">BXD50</TD><TD class="values" width="60">X</TD>
+</TR>
 
-<TR><TD class="strains" width="80">BXD52</TD><TD class="values" width="60">41.392</TD>
-<TD class="strains" width="80">BXD53</TD><TD class="values" width="60">30.412</TD><TD class="strains" width="80">BXD54</TD><TD class="values" width="60">26.209</TD><TD class="strains" width="80">BXD55</TD><TD class="values" width="60">62.690</TD><TD class="strains" width="80">BXD56</TD><TD class="values" width="60">23.878</TD><TD class="strains" width="80">BXD59</TD><TD class="values" width="60">38.629</TD></TR>
+<TR>
+<TD class="strains" width="80">BXD51</TD><TD class="values" width="60">16.156</TD>
+<TD class="strains" width="80">BXD52</TD><TD class="values" width="60">41.392</TD>
+<TD class="strains" width="80">BXD53</TD><TD class="values" width="60">30.412</TD>
+<TD class="strains" width="80">BXD54</TD><TD class="values" width="60">26.209</TD>
+<TD class="strains" width="80">BXD55</TD><TD class="values" width="60">62.690</TD>
+<TD class="strains" width="80">BXD56</TD><TD class="values" width="60">23.878</TD>
+</TR>
 
-<TR><TD class="strains" width="80">BXD60</TD><TD class="values" width="60">27.467</TD>
-<TD class="strains" width="80">BXD61</TD><TD class="values" width="60">23.630</TD><TD class="strains" width="80">BXD62</TD><TD class="values" width="60">X</TD><TD class="strains" width="80">BXD63</TD><TD class="values" width="60">-0.900</TD><TD class="strains" width="80">BXD64</TD><TD class="values" width="60">X</TD><TD class="strains" width="80">BXD65</TD><TD class="values" width="60">43.094</TD></TR>
+<TR>
+<TD class="strains" width="80">BXD59</TD><TD class="values" width="60">38.629</TD>
+<TD class="strains" width="80">BXD60</TD><TD class="values" width="60">27.467</TD>
+<TD class="strains" width="80">BXD61</TD><TD class="values" width="60">23.630</TD>
+<TD class="strains" width="80">BXD62</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD63</TD><TD class="values" width="60">-0.900</TD>
+<TD class="strains" width="80">BXD64</TD><TD class="values" width="60">X</TD>
+</TR>
 
-<TR><TD class="strains" width="80">BXD66</TD><TD class="values" width="60">49.670</TD>
-<TD class="strains" width="80">BXD67</TD><TD class="values" width="60">16.654</TD><TD class="strains" width="80">BXD68</TD><TD class="values" width="60">21.356</TD><TD class="strains" width="80">BXD69</TD><TD class="values" width="60">20.465</TD><TD class="strains" width="80">BXD70</TD><TD class="values" width="60">26.860</TD><TD class="strains" width="80">BXD71</TD><TD class="values" width="60">29.422</TD></TR>
+<TR>
+<TD class="strains" width="80">BXD65a</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD65b</TD><TD class="values" width="60">56.081</TD>
+<TD class="strains" width="80">BXD65</TD><TD class="values" width="60">43.094</TD>
+<TD class="strains" width="80">BXD66</TD><TD class="values" width="60">49.670</TD>
+<TD class="strains" width="80">BXD67</TD><TD class="values" width="60">16.654</TD>
+<TD class="strains" width="80">BXD68</TD><TD class="values" width="60">21.356</TD>
+</TR>
 
-<TR><TD class="strains" width="80">BXD72</TD><TD class="values" width="60">X</TD>
-<TD class="strains" width="80">BXD73</TD><TD class="values" width="60">30.713</TD><TD class="strains" width="80">BXD74</TD><TD class="values" width="60">X</TD><TD class="strains" width="80">BXD75</TD><TD class="values" width="60">25.012</TD><TD class="strains" width="80">BXD76</TD><TD class="values" width="60">38.874</TD><TD class="strains" width="80">BXD77</TD><TD class="values" width="60">15.183</TD></TR>
+<TR>
+<TD class="strains" width="80">BXD69</TD><TD class="values" width="60">20.465</TD>
+<TD class="strains" width="80">BXD70</TD><TD class="values" width="60">26.860</TD>
+<TD class="strains" width="80">BXD71</TD><TD class="values" width="60">29.422</TD>
+<TD class="strains" width="80">BXD72</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD73a</TD><TD class="values" width="60">68.684</TD>
+<TD class="strains" width="80">BXD73b</TD><TD class="values" width="60">X</TD>
+</TR>
 
-<TR><TD class="strains" width="80">BXD78</TD><TD class="values" width="60">25.444</TD>
-<TD class="strains" width="80">BXD79</TD><TD class="values" width="60">60.408</TD><TD class="strains" width="80">BXD80</TD><TD class="values" width="60">68.684</TD><TD class="strains" width="80">BXD81</TD><TD class="values" width="60">X</TD><TD class="strains" width="80">BXD83</TD><TD class="values" width="60">35.370</TD><TD class="strains" width="80">BXD84</TD><TD class="values" width="60">34.561</TD></TR>
+<TR>
+<TD class="strains" width="80">BXD73</TD><TD class="values" width="60">30.713</TD>
+<TD class="strains" width="80">BXD74</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD75</TD><TD class="values" width="60">25.012</TD>
+<TD class="strains" width="80">BXD76</TD><TD class="values" width="60">38.874</TD>
+<TD class="strains" width="80">BXD77</TD><TD class="values" width="60">15.183</TD>
+<TD class="strains" width="80">BXD78</TD><TD class="values" width="60">25.444</TD>
+</TR>
 
-<TR><TD class="strains" width="80">BXD85</TD><TD class="values" width="60">46.055</TD>
-<TD class="strains" width="80">BXD86</TD><TD class="values" width="60">43.238</TD><TD class="strains" width="80">BXD87</TD><TD class="values" width="60">72.431</TD><TD class="strains" width="80">BXD88</TD><TD class="values" width="60">18.648</TD><TD class="strains" width="80">BXD89</TD><TD class="values" width="60">32.317</TD><TD class="strains" width="80">BXD90</TD><TD class="values" width="60">45.796</TD></TR>
+<TR>
+<TD class="strains" width="80">BXD79</TD><TD class="values" width="60">60.408</TD>
+<TD class="strains" width="80">BXD81</TD><TD class="values" width="60">X</TD>
+<TD class="strains" width="80">BXD83</TD><TD class="values" width="60">35.370</TD>
+<TD class="strains" width="80">BXD84</TD><TD class="values" width="60">34.561</TD>
+<TD class="strains" width="80">BXD85</TD><TD class="values" width="60">46.055</TD>
+<TD class="strains" width="80">BXD86</TD><TD class="values" width="60">43.238</TD>
+</TR>
 
-<TR><TD class="strains" width="80">BXD91</TD><TD class="values" width="60">30.291</TD>
-<TD class="strains" width="80">BXD92</TD><TD class="values" width="60">56.081</TD><TD class="strains" width="80">BXD93</TD><TD class="values" width="60">X</TD><TD class="strains" width="80">BXD94</TD><TD class="values" width="60">11.133</TD><TD class="strains" width="80">BXD95</TD><TD class="values" width="60">52.551</TD><TD class="strains" width="80">BXD96</TD><TD class="values" width="60">20.704</TD></TR>
+<TR>
+<TD class="strains" width="80">BXD87</TD><TD class="values" width="60">72.431</TD>
+<TD class="strains" width="80">BXD88</TD><TD class="values" width="60">18.648</TD>
+<TD class="strains" width="80">BXD89</TD><TD class="values" width="60">32.317</TD>
+<TD class="strains" width="80">BXD90</TD><TD class="values" width="60">45.796</TD>
+<TD class="strains" width="80">BXD91</TD><TD class="values" width="60">30.291</TD>
+<TD class="strains" width="80">BXD93</TD><TD class="values" width="60">X</TD>
 
-<TR><TD class="strains" width="80">BXD97</TD><TD class="values" width="60">X</TD>
-<TD class="strains" width="80">BXD98</TD><TD class="values" width="60">14.143</TD><TD class="strains" width="80">BXD99</TD><TD class="values" width="60">50.821</TD><TD class="strains" width="80">BXD100</TD><TD class="values" width="60">32.187</TD><TD class="strains" width="80">BXD101</TD><TD class="values" width="60">X</TD><TD class="strains" width="80">BXD102</TD><TD class="values" width="60">X</TD></TR>
+</TR>
 
-<TR><TD class="strains" width="80">BXD103</TD><TD class="values" width="60">X</TD><TD></TD><TD></TD><TD></TD><TD></TD><TD></TD></TR>
+<TR>
+<TD class="strains" width="80">BXD94</TD><TD class="values" width="60">11.133</TD>
+<TD class="strains" width="80">BXD95</TD><TD class="values" width="60">52.551</TD>
+<TD class="strains" width="80">BXD98</TD><TD class="values" width="60">14.143</TD>
+<TD class="strains" width="80">BXD99</TD><TD class="values" width="60">50.821</TD>
+<TD class="strains" width="80">BXD100</TD><TD class="values" width="60">32.187</TD>
+<TD class="strains" width="80">BXD101</TD><TD class="values" width="60">X</TD>
+</TR>
+
+<TR>
+<TD class="strains" width="80">BXD102</TD><TD class="values" width="60">X</TD>
+<TD></TD><TD></TD><TD></TD><TD></TD><TD></TD></TR>
 </TABLE>
 
 <P>Copy the following line to paste into the GeneNetwork entry box:</P>
-<CODE>6.717 11.511 X 20.201 X 15.175 X 43.132 21.755 47.028 X 22.096 22.219 X X 35.218 49.557 34.263 X 8.783 62.439 40.449 X  X 36.554 29.903 28.437 14.894 5.665 60.723 50.458 16.857 37.410 35.857 33.139 42.392 X 62.003 28.797 30.399 X X 30.876 22.120 X 28.619 X 16.156 41.392 30.412 26.209 62.690 23.878 38.629 27.467 23.630 X -0.900 X 43.094 49.670 16.654 21.356 20.465 26.860 29.422 X 30.713 X 25.012 38.874 15.183 25.444 60.408 68.684 X 35.370 34.561 46.055 43.238 72.431 18.648 32.317 45.796 30.291 56.081 X 11.133 52.551 20.704 X 14.143 50.821 32.187 X  X  X </CODE>
+<CODE>6.717 11.511 X 20.201 X 15.175 X 43.132 21.755 47.028 X 22.096 22.219 X X 35.218 49.557 34.263 X 8.783 62.439 40.449 X  X 36.554 29.903 28.437 14.894 5.665 60.723 50.458 16.857 37.410 35.857 33.139 42.392 X 62.003 28.797 30.399 X X 30.876 22.120 20.704 X 28.619 X 16.156 41.392 30.412 26.209 62.690 23.878 38.629 27.467 23.630 X -0.900 X X 56.081 43.094 49.670 16.654 21.356 20.465 26.860 29.422 X 68.684 X 30.713 X 25.012 38.874 15.183 25.444 60.408 X 35.370 34.561 46.055 43.238 72.431 18.648 32.317 45.796 30.291 X 11.133 52.551 14.143 50.821 32.187 X  X </CODE>
 
 <HR width="90%"><P class="subtitle">BXH</P>
 
