--- a/web/mouseCross.html
+++ b/web/mouseCross.html
@@ -128,7 +128,7 @@ The BXD family of recombinant inbred (<A HREF="http://www.complextrait.org/archi
 <DIR>
 <A HREF="http://www.genenetwork.org/bxd/"><img src="/images/upload/BXD20.png" alt="BXD20" border= 0 valign="middle" width="273" height="178"></A>
 </DIR>
-<DIR><P><SMALL><B>Legend:</B> Photo gallery of BXD strains (2009, A. Centeno)</SMALL></P>
+<DIR><P><SMALL><B>Legend:</B> Photo gallery of BXD strains</SMALL></P>
 </DIR>
 
 
@@ -148,11 +148,11 @@ The BXD family of recombinant inbred (<A HREF="http://www.complextrait.org/archi
 
 <OL>
 
-<LI> BXD73, BXD73a (original known as BXD80), and BXD73b (originally known as BXD103) are genetically very similar. BXD73 and BXD80 are genetically identical at 82264 of 100290 markers (82% identical by descent). BXD73 keeps its original name and JAX identifier number (JR#7117), whereas BXD80 is now referred to as BXD73a (JR#7124). BXD73 and BXD103 are genetically identical at 90917 of 100290 markers (90.6% identical by descent). BXD103 is now referred to as BXD73b (JR#7146). 
+<LI> <a href="http://jaxmice.jax.org/strain/007117" target="_blank">BXD73</a>, <a href="http://jaxmice.jax.org/strain/007124" target="_blank">BXD73a</a> (original known as BXD80), and <a href="http://jaxmice.jax.org/strain/007146" target="_blank">BXD73b</a> (originally known as BXD103) are genetically very similar. <a href="http://jaxmice.jax.org/strain/007117" target="_blank">BXD73</a> and BXD80 are genetically identical at 82264 of 100290 markers (82% identical by descent). <a href="http://jaxmice.jax.org/strain/007117" target="_blank">BXD73</a> keeps its original name and JAX identifier number (JR#7117), whereas BXD80 is now referred to as <a href="http://jaxmice.jax.org/strain/007124" target="_blank">BXD73a</a> (JR#7124). <a href="http://jaxmice.jax.org/strain/007117" target="_blank">BXD73</a> and BXD103 are genetically identical at 90917 of 100290 markers (90.6% identical by descent). BXD103 is now referred to as <a href="http://jaxmice.jax.org/strain/007146" target="_blank">BXD73b</a> (JR#7146). 
 
-<LI> BXD48 and BXD48a (originally known as BXD96) are sister substrains, and are genetically identical at 93485 of 100290 markers (93.2% identical by descent). BXD48 retains its original name and JAX identifier number (JAX JR#7097) whereas BXD96 is now referred to as BXD48a (JR#7139). 
+<LI> <a href="http://jaxmice.jax.org/strain/007097" target="_blank">BXD48</a> and <a href="http://jaxmice.jax.org/strain/007139" target="_blank">BXD48a</a> (originally known as BXD96) are sister substrains, and are genetically identical at 93485 of 100290 markers (93.2% identical by descent). <a href="http://jaxmice.jax.org/strain/007097" target="_blank">BXD48</a> retains its original name and JAX identifier number (JAX JR#7097) whereas BXD96 is now referred to as <a href="http://jaxmice.jax.org/strain/007139" target="_blank">BXD48a</a> (JR#7139). 
 
-<LI> BXDD65, BXD65a (originally known as BXD97), and BXD65b (originally known as BXD92) are sister substrains.  BXDD65 and BXD97 are genetically identical at 92225 of 100290 markers (92% identical by descent). BXD97 is now referred to as BXD65a (JR#7140). BXDD65 and BXD92 are genetically identical at 6155 of 6459 markers (95.3% identical by descent). BXD65 retains its original name and JAX identifier (JR#7110) whereas BXD92 is now referred to as BXD65b (JR#9677).
+<LI> <a href="http://jaxmice.jax.org/strain/007110" target="_blank">BXD65</a>, <a href="http://jaxmice.jax.org/strain/007140" target="_blank">BXD65a</a> (originally known as BXD97), and <a href="http://jaxmice.jax.org/strain/009677" target="_blank">BXD65b</a> (originally known as BXD92) are sister substrains.  <a href="http://jaxmice.jax.org/strain/007110" target="_blank">BXD65</a> and BXD97 are genetically identical at 92225 of 100290 markers (92% identical by descent). BXD97 is now referred to as <a href="http://jaxmice.jax.org/strain/007140" target="_blank">BXD65a</a> (JR#7140). <a href="http://jaxmice.jax.org/strain/007110" target="_blank">BXD65</a> and BXD92 are genetically identical at 6155 of 6459 markers (95.3% identical by descent). <a href="http://jaxmice.jax.org/strain/007110" target="_blank">BXD65</a> retains its original name and JAX identifier (JR#7110) whereas BXD92 is now referred to as <a href="http://jaxmice.jax.org/strain/009677" target="_blank">BXD65b</a> (JR#9677).
 
 </OL>
 
