--- a/web/whats_new.html
+++ b/web/whats_new.html
@@ -29,7 +29,74 @@
 		<TD valign="top" height="200" width="100%" bgcolor="#eeeeee">
 
 <P class="title">Latest Updates and News from Genenetwork  <A HREF="/webqtl/main.py?FormID=editHtml"><img src="/images/modify.gif" alt="modify this page" border= 0 valign="middle"></A></P>
+<!--FB like currently off. Uncomment if needed on.
 <div class="fb-like" data-href="http://www.genenetwork.org/whats_new.html" data-layout="standard" data-action="like" data-show-faces="false" data-share="true"></div>
+-->
+<Blockquote>
+<STRONG>2014-10-17: Notes on new BXD names</STRONG>.
+<OL>
+
+<LI> <a href="http://jaxmice.jax.org/strain/007117" target="_blank">BXD73</a>, <a href="http://jaxmice.jax.org/strain/007124" target="_blank">BXD73a</a> (original known as <i>BXD80</i>), and <a href="http://jaxmice.jax.org/strain/007146" target="_blank">BXD73b</a> (originally known as <i>BXD103</i>) are genetically very similar. <a href="http://jaxmice.jax.org/strain/007117" target="_blank">BXD73</a> and <i>BXD80</i> are genetically identical at 82264 of 100290 markers (82% identical by descent). <a href="http://jaxmice.jax.org/strain/007117" target="_blank">BXD73</a> keeps its original name and JAX identifier number (JR#7117), whereas <i>BXD80</i> is now referred to as <a href="http://jaxmice.jax.org/strain/007124" target="_blank">BXD73a</a> (JR#7124). <a href="http://jaxmice.jax.org/strain/007117" target="_blank">BXD73</a> and BXD103 are genetically identical at 90917 of 100290 markers (90.6% identical by descent). <i>BXD103</i> is now referred to as <a href="http://jaxmice.jax.org/strain/007146" target="_blank">BXD73b</a> (JR#7146). 
+
+<LI> <a href="http://jaxmice.jax.org/strain/007097" target="_blank">BXD48</a> and <a href="http://jaxmice.jax.org/strain/007139" target="_blank">BXD48a</a> (originally known as <i>BXD96</i>) are sister substrains, and are genetically identical at 93485 of 100290 markers (93.2% identical by descent). <a href="http://jaxmice.jax.org/strain/007097" target="_blank">BXD48</a> retains its original name and JAX identifier number (JAX JR#7097) whereas BXD96 is now referred to as <a href="http://jaxmice.jax.org/strain/007139" target="_blank">BXD48a</a> (JR#7139). 
+
+<LI> <a href="http://jaxmice.jax.org/strain/007110" target="_blank">BXD65</a>, <a href="http://jaxmice.jax.org/strain/007140" target="_blank">BXD65a</a> (originally known as <i>BXD97</i>), and <a href="http://jaxmice.jax.org/strain/009677" target="_blank">BXD65b</a> (originally known as <i>BXD92</i>) are sister substrains.  <a href="http://jaxmice.jax.org/strain/007110" target="_blank">BXD65</a> and <i>BXD97</i> are genetically identical at 92225 of 100290 markers (92% identical by descent). <i>BXD97</i> is now referred to as <a href="http://jaxmice.jax.org/strain/007140" target="_blank">BXD65a</a> (JR#7140). <a href="http://jaxmice.jax.org/strain/007110" target="_blank">BXD65</a> and <i>BXD92</i> are genetically identical at 6155 of 6459 markers (95.3% identical by descent). <a href="http://jaxmice.jax.org/strain/007110" target="_blank">BXD65</a> retains its original name and JAX identifier (JR#7110) whereas <i>BXD92</i> is now referred to as <a href="http://jaxmice.jax.org/strain/009677" target="_blank">BXD65b</a> (JR#9677).
+
+</OL>
+
+</Blockquote>
+
+<Blockquote>
+<STRONG>2014-10-10: BXD Elicited Peritoneal Neutrophils Gene Expression</STRONG> profiling by array entered into GeneNetwork.
+<ul>
+<li>UTHSC Elicited Peritoneal Neutrophils Affy MoGene 2.0 ST (Oct14) RMA **</li>
+<li>UTHSC Elicited Peritoneal Neutrophils Affy MoGene 2.0 ST (Oct14) RMA Exon Level **</li>
+</ul>
+Currently this dataset is confidential, please contact <a href="mailto:mradic@uthsc.edu">Marko Radic</a> University of Tennessee Health Science Center for further information. (Implemented by Marko Radic, Indira Neeli, Teruki Hagiwara, Arthur Centeno and Rob Williams).
+</Blockquote>
+
+<Blockquote>
+<STRONG>2014-08-29: Mouse Diversity Panel Hippocampus Antidepressant</STRONG> profiling by array entered into GeneNetwork.
+<ul>
+<li>UFL MDP Hippocampus Antidepressant Affy Mouse 430 2.0 (Aug14) RMA **</li>
+</ul>
+Currently this dataset is confidential, please contact <a href="mailto:brookemiller@ufl.edu"> Brooke Miller</a> University of Florida for further information. (Implemented by Robert Clark, Arthur Centeno and Rob Williams).
+</Blockquote>
+
+<Blockquote>
+<STRONG>2014-08-08: BXD Fecal Metabolites LFD+HFD</STRONG> profiling by array entered into GeneNetwork.
+<ul>
+<li>RTI RCMRC BXD Fecal Metabolites LFD+HFD (Aug14) **</li>
+<li>RTI RCMRC BXD Fecal Metabolites HFD (Aug14) **</li>
+<li>RTI RCMRC BXD Fecal Metabolites LFD (Aug14) **</li>
+</ul>
+Currently this dataset is confidential, please contact <a href="mailto:rclark@rti.org"> Robert Clark </a>  for further information. (Implemented by Robert Clark, Arthur Centeno and Rob Williams).
+</Blockquote>
+
+<Blockquote>
+<STRONG>2014-05-02: BXD Liver, Soluble Proteins CD and Hi-Fat Gene Expression</STRONG> profiling by array entered into GeneNetwork.
+<ul>
+<li>EPFL/ETHZ BXD Liver, Soluble Proteins CD (May14) SWATH **</li>
+<li>EPFL/ETHZ BXD Liver, Soluble Proteins HFD (May14) SWATH **</li>
+</ul>
+Currently this dataset is confidential, please contact <a href="mailto:admin.auwerx@epfl.ch">Johan Auwerx</a> Ecole Polytechnique Federale de Lausanne for further information. (Implemented by Johan Auwerx, Evan Williams, Arthur Centeno and Rob Williams).
+</Blockquote>
+
+<Blockquote>
+<STRONG>2014-04-03: UTHSC Mouse BXD Gastrointestinal Affy MoGene 1.0 ST Gene Level (Apr14) RMA</STRONG> profiling by array entered into GeneNetwork.
+<ul>
+<li>UTHSC Mouse BXD Gastrointestinal Affy MoGene 1.0 ST Gene Level (Apr14) RMA **</li>
+</ul>
+<p>Currently this dataset is confidential, please contact <a href="mailto:dblack@uthsc.edu">Dennis D Black</a> UT Le Bonheur Pediatric Specialists for further information. (Implemented by Dennis D Black, Arthur Centeno and Rob Williams).</p>
+</Blockquote>
+
+<Blockquote>
+<STRONG>2014-03-07: The Genotype-Tissue Expression (GTEx)</STRONG>  is providing a comprehensive atlas of gene expression and regulation across multiple human tissues.  The latest GTEx data release (dbGaP release phs000424.v4.p1) is now available on <a href="http://www.genenetwork.org/webqtl/main.py?FormID=sharinginfo&GN_AccessionId=545" target=_blank">GeneNetwork</a>.
+<p>The Genotype-Tissue Expression (GTEx) project is a collaborative effort that aims to identify correlations between genotype and tissue-specific gene expression levels that will help identify regions of the genome that influence whether and how much a gene is expressed. GTEx is funded through the Common Fund, and managed by the NIH Office of the Director in partnership with the National Human Genome Research Institute, National Institute of Mental Health, the National Cancer Institute, the National Center for Biotechnology Information at the National Library of Medicine, the National Heart, Lung and Blood Institute, the National Institute on Drug Abuse, and the National Institute of Neurological Diseases and Stroke, all part of NIH. This series of 837 samples represents multiple tissues collected from 102 GTEX donors and 1 control cell line. In total, 30 tissue sites are represented including Adipose, Artery, Heart, Lung, Whole Blood, Muscle, Skin, and 11 brain subregions. RNA-seq expression data, robust clinical data, pathological annotations, and genotypes are also available for these samples from dbGaP (<a href="http://www.ncbi.nlm.nih.gov/projects/gap/cgi-bin/study.cgi?study_id=phs000424.v2.p1" target="_blank">http://www.ncbi.nlm.nih.gov/projects/gap/cgi-bin/study.cgi?study_id=phs000424.v2.p1</a>) and the GTEx portal (<a href="http://www.broadinstitute.org/gtex" target="_blank">www.broadinstitute.org/gtex</a>). While GTEx is no longer generating Affymetrix expression data, donor enrollment continues and is expected to reach 1,000 by the end of 2015. Updates to the GTEx data in dbGaP and the GTEx Portal will be made periodically. contributor: GTEx Laboratory, Data Analysis, and Coordinating Center (LDACC) contributor: The Broad Institute of MIT and Harvard (LDACC PIs: Kristin Ardlie and Gaddy Getz).</p>
+
+<p><a href="http://www.humanconnectome.org/data/data-use-terms/open-access.html" target="_blank">WU-Minn HCP Consortium Open Access Data Use Terms</a></p>
+
+</Blockquote>
 
 <Blockquote>
 <STRONG>2014-01-31: BXD Heart Polar Metabolites Gene Expression</STRONG> profiling by array entered into GeneNetwork.
