Committer: root <root@lily.uthsc.edu> On branch master

--- a/web/reference.html
+++ b/web/reference.html
@@ -283,6 +283,8 @@ Bhandari P, Hill JS, Farris SP, Costin B, Martin I, Chan CL, Alaimo JT, Bettinge
 <LI>
 Cheng Y, Gaughan J, Midic U, Han Z, Liang CG, Patel BG, Latham KE (<A HREF="http://www.genetics.org/content/193/3/877.long" target="_blank" class="fwn">2013</A>)  Systems genetics implicates cytoskeletal genes in oocyte control of cloned embryo quality. Genetics 193:877-896  <A HREF="/images/upload/Cheng_Latham_2013.pdf" target="_blank" class="fwn">PDF version</A>
 <LI>
+Dogan A, Lasch P, Neuschl C, Millrose MK, Alberts R, Schughart K, Naumann D, Brockmann GA. (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23758785" target="_blank" class="fwn">2013</A>) ATR-FTIR spectroscopy reveals genomic loci regulating the tissue response in high fat diet fed BXD recombinant inbred mouse strains. BMC Genomics 14:386
+<LI>
 DuBose CS, Chesler EJ, Goldowitz D, Hamre KM (<A HREF="https://ncbi.nlm.nih.gov/pubmed/23289978" target="_blank" class="fwn">2013</A>) Use of the expanded panel of BXD mice narrow QTL regions in ethanol-induced locomotor activation and motor incoordination. Alcohol Clin Exp Res 37:170-83
 <LI>
 Farris SP, Miles MF (<A HREF="http://www.plosone.org/article/info%3Adoi%2F10.1371%2Fjournal.pone.0082435" target="_blank" class="fwn">2013</A>) Fyn-dependent gene networks in acute ethanol sensitivity. PLoS One 8:e82435
